--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "froge",
-  "version": "1.3.1",
+  "version": "1.4.0",
   "exports": {
     ".": "./dist/index.js"
   },
@@ -20,7 +20,7 @@
     "build": "tsc",
     "test": "npm run build-tests && npm run exec-tests",
     "build-tests": "tsc --project tsconfig.test.json",
-    "exec-tests": "node --test"
+    "exec-tests": "node --test \"test-dist/**/*.test.js\""
   },
   "author": "rlqd.dev",
   "license": "MIT",
